--- a/pillar-web/src/styles/main.sass
+++ b/pillar-web/src/styles/main.sass
@@ -70,7 +70,7 @@ $navbar-backdrop-height: 600px
 .alert
 	display: block
 	position: relative
-	z-index: 13
+	z-index: 15
 	width: 100%
 	margin-bottom: 0
 	text-align: center
@@ -198,7 +198,7 @@ header.navbar-header
 
 
 .navbar-transparent
-	z-index: 13 /* Flowplayer seems to take up to 11, project container is 12 */
+	z-index: 15 /* Flowplayer seems to take up to 11, project container is 12 */
 	border: none
 	border-width: 0
 	display: flex
